Add/fix tests